Show the PHP version on the system check
We often have users wondering what PHP version they are running. Now they can know easily.

--- a/plugins/Installation/templates/_systemCheckSection.twig
+++ b/plugins/Installation/templates/_systemCheckSection.twig
@@ -10,7 +10,7 @@
 
         <td>
             {% if infos.phpVersion_ok %}
-                {{ ok }}
+                {{ ok }} {{ infos.phpVersion }}
             {% else %}
                 {{ error }} <span class="err">{{ 'General_Error'|translate }}: {{ 'General_Required'|translate(MinPHP)|raw }}</span>
             {% endif %}
