#7087 Show the JS tracking code instead of the dashboard while no visit is tracked

--- a/plugins/SitesManager/stylesheets/SitesManager.less
+++ b/plugins/SitesManager/stylesheets/SitesManager.less
@@ -36,3 +36,16 @@ td.editable-site-field:hover {
 .link_but:hover > span {
   text-decoration: underline;
 }
+
+.site-without-data {
+  padding: 15px;
+  h2 {
+    font-size: 1.3em;
+    margin-top: 0.8em;
+    font-weight: bold;
+  }
+  h3 {
+    font-size: 1em;
+    margin-top: 0.8em;
+  }
+}
