--- a/plugins/SitesManager/stylesheets/SitesManager.less
+++ b/plugins/SitesManager/stylesheets/SitesManager.less
@@ -40,12 +40,15 @@ td.editable-site-field:hover {
 .site-without-data {
   padding: 15px;
   h2 {
-    font-size: 1.3em;
-    margin-top: 0.8em;
-    font-weight: bold;
+    border-bottom: 1px solid #ccc;
+    margin: 25px 0;
+    padding: 0 0 5px 0;
+    font-size: 24px;
   }
   h3 {
-    font-size: 1em;
-    margin-top: 0.8em;
+    margin: 15px 0;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: normal;
   }
 }
