--- a/plugins/TestRunner/templates/travis.yml.twig
+++ b/plugins/TestRunner/templates/travis.yml.twig
@@ -121,7 +121,7 @@ before_script:
 {% endif %}
   - ./tests/travis/install_mysql_5.6.sh
 
-  phpenv config-rm xdebug.ini;
+  - phpenv config-rm xdebug.ini;
 
   # add always_populate_raw_post_data=-1 to php.ini
   - echo "always_populate_raw_post_data=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
