--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -94,6 +94,12 @@
   width: ~"calc(100% + 40px)";
 }
 
+#visitsTotal table.dataTable {
+  td:first-child, th:first-child {
+    padding-left: 14px;
+  }
+}
+
 .visitsLiveFooter img {
     vertical-align: middle;
 }
