--- a/plugins/UsersManager/templates/userSettings.twig
+++ b/plugins/UsersManager/templates/userSettings.twig
@@ -20,6 +20,7 @@
              inline-help="{{ 'UsersManager_YourUsernameCannotBeChanged'|translate|e('html_attr') }}">
         </div>
 
+        {% if isUsersAdminEnabled %}
         <div piwik-field uicontrol="text" name="email"
              ng-model="personalSettings.email"
              ng-change="personalSettings.requirePasswordConfirmation()"
@@ -27,6 +28,7 @@
              data-title="{{ 'UsersManager_Email'|translate|e('html_attr') }}"
              value="{{ userEmail }}">
         </div>
+        {% endif %}
 
         <div id="languageHelp" class="inline-help-node">
             <a target="_blank" rel="noreferrer noopener" href="https://matomo.org/translations/">
@@ -72,7 +74,7 @@
              value="{{ defaultDate }}" options="{{ availableDefaultDates|json_encode }}">
         </div>
 
-        {% if isValidHost is defined and isValidHost %}
+        {% if isValidHost is defined and isValidHost and isUsersAdminEnabled %}
 
             <div piwik-field uicontrol="password" name="password" autocomplete="off"
                  ng-model="personalSettings.password"
