--- a/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
+++ b/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
@@ -1,10 +1,9 @@
+{% if properties.columns_to_display is not empty %}
 {% set lastSeenComparePeriod = false %}
 {% set comparedPeriodPretty = dataTable.getFirstRow().getMetadata('comparePeriodPretty') %}
-{% if properties.columns_to_display is not empty %}
+{% set isComparingSegments = dataTable.getMetadata('compareSegments')|default([])|length > 1 %}
+{% set isComparingPeriods = dataTable.getMetadata('comparePeriods')|default([])|length > 1 %}
 {%- for rowId, row in dataTable.getRows() -%}
-    {% set isComparingSegments = comparisonSegmentIndices|length > 1 %}
-    {% set isComparingPeriods = comparePeriodIndices|length > 1 or comparePeriodIndices|first|length > 1 %}
-
     {% set comparePeriod = row.getMetadata('comparePeriodPretty') %}
     {% if lastSeenComparePeriod != comparePeriod and isComparingSegments and isComparingPeriods %}
     <tr class="comparePeriod">
@@ -22,17 +21,13 @@
     {% endif %}
     {% set overrideParams = {} %}
 
-    {% set compareSegmentIndex = comparisonSegmentIndices[row.getMetadata('compareSegment')|default('')] %}
-    {% set comparePeriodIndex = comparePeriodIndices[row.getMetadata('comparePeriodOriginal')|default('')][row.getMetadata('compareDateOriginal')|default('')] %}
-
     {% if row.getMetadata('compareSegment')|default is not empty %}{% set overrideParams = overrideParams|merge({ segment: row.getMetadata('compareSegment'), compareSegments: '' }) %}{% endif %}
     {% if row.getMetadata('comparePeriod')|default is not empty %}{% set overrideParams = overrideParams|merge({ period: row.getMetadata('comparePeriodOriginal'), comparePeriods: '' }) %}{% endif %}
     {% if row.getMetadata('compareDate')|default is not empty %}{% set overrideParams = overrideParams|merge({ date: row.getMetadata('compareDateOriginal'), compareDates: '' }) %}{% endif %}
     {% set idSubtable = row.getMetadata('idsubdatatable_in_db') %}
     <tr
         {% if idSubtable != false %}data-idsubtable="{{ idSubtable|e('html_attr') }}"{% endif %}
-        data-comparison-segment="{{ compareSegmentIndex }}"
-        data-comparison-period="{{ comparePeriodIndex }}"
+        data-comparison-series="{{ loop.index0 }}"
         class="comparisonRow"
         data-param-override="{{ overrideParams|json_encode|e('html_attr') }}" data-label="{{ comparedRow.getColumn('label')|e('html_attr') }}"
         {% if row.getMetadata('segment') is not false %}data-segment-filter="{{ row.getMetadata('segment')|e('html_attr') }}"{% endif %}
