--- a/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
+++ b/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
@@ -22,8 +22,8 @@
     {% set overrideParams = {} %}
 
     {% if row.getMetadata('compareSegment')|default is not empty %}{% set overrideParams = overrideParams|merge({ segment: row.getMetadata('compareSegment'), compareSegments: '' }) %}{% endif %}
-    {% if row.getMetadata('comparePeriod')|default is not empty %}{% set overrideParams = overrideParams|merge({ period: row.getMetadata('comparePeriodOriginal'), comparePeriods: '' }) %}{% endif %}
-    {% if row.getMetadata('compareDate')|default is not empty %}{% set overrideParams = overrideParams|merge({ date: row.getMetadata('compareDateOriginal'), compareDates: '' }) %}{% endif %}
+    {% if row.getMetadata('comparePeriod')|default is not empty %}{% set overrideParams = overrideParams|merge({ period: row.getMetadata('comparePeriod'), comparePeriods: '' }) %}{% endif %}
+    {% if row.getMetadata('compareDate')|default is not empty %}{% set overrideParams = overrideParams|merge({ date: row.getMetadata('compareDate'), compareDates: '' }) %}{% endif %}
     {% set idSubtable = row.getMetadata('idsubdatatable_in_db') %}
     <tr
         {% if idSubtable != false %}data-idsubtable="{{ idSubtable|e('html_attr') }}"{% endif %}
@@ -44,7 +44,7 @@
         {% if column != 'label' %}
         {% set columnValue = row.getColumn(column) %}
         <td class="column">
-            {% set comparisonTotals = indexedComparisonTotals[row.getMetadata('compareSegment')|default('')][row.getMetadata('comparePeriodOriginal')|default('')][row.getMetadata('compareDateOriginal')|default('')]|default(null) %}
+            {% set comparisonTotals = indexedComparisonTotals[row.getMetadata('compareSegment')|default('')][row.getMetadata('comparePeriod')|default('')][row.getMetadata('compareDate')|default('')]|default(null) %}
 
             {% set comparisonTooltipSuffix = '' %}
             {% set columnChange = false %}
