--- a/plugins/Feedback/templates/index.twig
+++ b/plugins/Feedback/templates/index.twig
@@ -8,48 +8,48 @@
 {% block content %}
 
     <div id="feedback-faq" class="admin">
+        <div piwik-content-block
+             content-title="{{ headline|e('html_attr') }}"
+             feature="{{ 'General_Help'|translate|e('html_attr') }}">
+            <p>{{ 'General_MatomoIsACollaborativeProjectYouCanContributeAndDonateNextRelease'|translate(
+                    "<a target='_blank' rel='noreferrer noopener' href='https://matomo.org'>",
+                    "</a>",
+                    "<a target='_blank' rel='noreferrer noopener' href='https://matomo.org/get-involved/'>",
+                    "</a>",
+                    "<a href='#donate'>",
+                    "</a>",
+                    "<a target='_blank' rel='noreferrer noopener' href='https://matomo.org/team/'>",
+                    "</a>"
+                )|raw }}
+            </p>
+        </div>
+
         <div piwik-content-block content-title="{{ "Feedback_HowCanWeHelp"|translate|e('html_attr') }}" class="feedback-help-resources">
             <form target="_blank" method="GET" action="https://matomo.org/">
-                <div class="search-matomo-form">
-                    <div>
+                <div class="search-matomo-form z-depth-1">
+                    <div class="search-field">
                         <span class="icon-search"></span>
                         <input type="text" placeholder="{{'Feedback_SearchHelpResources'|translate|e('html_attr')}}" name="s"/>
                     </div>
-                    <input type="submit" value="Search" class="btn"/>
+                    <div class="search-button">
+                        <input type="submit" value="Search" class="btn"/>
+                    </div>
                 </div>
             </form>
             <h4>{{'Feedback_PopularHelpTopics'|translate}}</h4>
             {% for helpTopic in popularHelpTopics %}
                 <p> &bull;  <a rel="noreferrer noopener" target="_blank" href="{{helpTopic.url|e('html_attr')}}">{{helpTopic.title|translate}}</a></p>
             {% endfor %}
-            <p><a rel="noreferrer noopener" target="_blank" href="https://matomo.org/docs/">{{'Feedback_BrowseUserGuides'|translate}}</a></p>
-            <p><a rel="noreferrer noopener" target="_blank" href="https://matomo.org/faq/">{{'Feedback_BrowseFaqs'|translate}}</a></p>
-        </div>
+            <p><a rel="noreferrer noopener" target="_blank" href="https://matomo.org/docs/">&raquo; {{'Feedback_BrowseUserGuides'|translate}}</a></p>
+            <p><a rel="noreferrer noopener" target="_blank" href="https://matomo.org/faq/">&raquo; {{'Feedback_BrowseFaqs'|translate}}</a></p>
 
-        <div piwik-content-block
-             content-title="{{ headline|e('html_attr') }}"
-             feature="{{ 'General_Help'|translate|e('html_attr') }}">
-            <p>{{ 'General_MatomoIsACollaborativeProjectYouCanContributeAndDonateNextRelease'|translate(
-                "<a target='_blank' rel='noreferrer noopener' href='https://matomo.org'>",
-                "</a>",
-                "<a target='_blank' rel='noreferrer noopener' href='https://matomo.org/get-involved/'>",
-                "</a>",
-                "<a href='#donate'>",
-                "</a>",
-                "<a target='_blank' rel='noreferrer noopener' href='https://matomo.org/team/'>",
-                "</a>"
-                )|raw }}
-            </p>
-        </div>
-
-        <div piwik-content-block content-title="{{ 'Feedback_CommunityHelp'|translate|e('html_attr') }}">
+            <h4>{{ 'Feedback_CommunityHelp'|translate }}</h4>
             <p> &bull; {{ 'Feedback_ViewUserGuides'|translate("<a target='_blank' rel='noreferrer noopener' href='https://matomo.org/docs/'>","</a>")|raw }}.</p>
             <p> &bull; {{ 'Feedback_ViewAnswersToFAQ'|translate("<a target='_blank' rel='noreferrer noopener' href='https://matomo.org/faq/'>","</a>")|raw }}.</p>
             <p> &bull; {{ 'Feedback_VisitTheForums'|translate("<a target='_blank' rel='noreferrer noopener' href='https://forum.matomo.org/'>","</a>")|raw }}.</p>
             <p> &bull; {{ 'API_LearnAboutCommonlyUsedTerms2'|translate }} <a href="{{ linkTo({'module':"API",'action':"glossary"}) }}">({{ 'API_Glossary'|translate }})</a></p>
-        </div>
 
-        <div piwik-content-block content-title="{{ 'Feedback_ProfessionalHelp'|translate|e('html_attr') }}">
+            <h4>{{ 'Feedback_ProfessionalHelp'|translate }}</h4>
             <p>{{ 'Feedback_ProfessionalServicesIntro'|translate }}</p>
 
             <p>{{ 'Feedback_ProfessionalServicesOfferIntro'|translate }}</p>
@@ -67,6 +67,7 @@
                 <input type="submit" class="btn" value="{{ 'General_MoreDetails'|translate }}">
             </form>
         </div>
+
 
         <div piwik-content-block content-title="Premium products">
             <p>Grow your business, understand your audience better and increase your sales and conversions with a premium plugin:
