--- a/plugins/Feedback/stylesheets/feedback.less
+++ b/plugins/Feedback/stylesheets/feedback.less
@@ -10,8 +10,12 @@
   }
 
   p, h4 {
-    line-height: 1.7em;
     font-size: 13px;
+    padding-bottom: 0;
+  }
+
+  .browse-matomo-help {
+    padding-top: 10px;
   }
 
   h4 {
