--- a/plugins/Feedback/templates/index.twig
+++ b/plugins/Feedback/templates/index.twig
@@ -36,12 +36,16 @@
                     </div>
                 </div>
             </form>
+
+            <div class="browse-matomo-help row">
+                <div class="col m6 s12"><a rel="noreferrer noopener" target="_blank" href="https://matomo.org/docs/">&raquo; {{'Feedback_BrowseUserGuides'|translate}}</a></div>
+                <div class="col m6 s12"><a rel="noreferrer noopener" target="_blank" href="https://matomo.org/faq/">&raquo; {{'Feedback_BrowseFaqs'|translate}}</a></div>
+            </div>
+
             <h4>{{'Feedback_PopularHelpTopics'|translate}}</h4>
             {% for helpTopic in popularHelpTopics %}
                 <p> &bull;  <a rel="noreferrer noopener" target="_blank" href="{{helpTopic.url|e('html_attr')}}">{{helpTopic.title|translate}}</a></p>
             {% endfor %}
-            <p><a rel="noreferrer noopener" target="_blank" href="https://matomo.org/docs/">&raquo; {{'Feedback_BrowseUserGuides'|translate}}</a></p>
-            <p><a rel="noreferrer noopener" target="_blank" href="https://matomo.org/faq/">&raquo; {{'Feedback_BrowseFaqs'|translate}}</a></p>
 
             <h4>{{ 'Feedback_CommunityHelp'|translate }}</h4>
             <p> &bull; {{ 'Feedback_ViewUserGuides'|translate("<a target='_blank' rel='noreferrer noopener' href='https://matomo.org/docs/'>","</a>")|raw }}.</p>
@@ -67,7 +71,6 @@
                 <input type="submit" class="btn" value="{{ 'General_MoreDetails'|translate }}">
             </form>
         </div>
-
 
         <div piwik-content-block content-title="Premium products">
             <p>Grow your business, understand your audience better and increase your sales and conversions with a premium plugin:
