--- a/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
+++ b/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
@@ -1,8 +1,8 @@
 {% if properties.columns_to_display is not empty %}
 {% set lastSeenComparePeriod = false %}
 {% set comparedPeriodPretty = dataTable.getFirstRow().getMetadata('comparePeriodPretty') %}
-{% set isComparingSegments = dataTable.getMetadata('compareSegments')|default([])|length > 1 %}
-{% set isComparingPeriods = dataTable.getMetadata('comparePeriods')|default([])|length > 1 %}
+{% set isComparingSegments = rootDataTable.getMetadata('compareSegments')|default([])|length > 1 %}
+{% set isComparingPeriods = rootDataTable.getMetadata('comparePeriods')|default([])|length > 1 %}
 {%- for rowId, row in dataTable.getRows() -%}
     {% set comparePeriod = row.getMetadata('comparePeriodPretty') %}
     {% if lastSeenComparePeriod != comparePeriod and isComparingSegments and isComparingPeriods %}
@@ -22,8 +22,8 @@
     {% set overrideParams = {} %}
 
     {% if row.getMetadata('compareSegment')|default is not empty %}{% set overrideParams = overrideParams|merge({ segment: row.getMetadata('compareSegment'), compareSegments: '' }) %}{% endif %}
-    {% if row.getMetadata('comparePeriod')|default is not empty %}{% set overrideParams = overrideParams|merge({ period: row.getMetadata('comparePeriod'), comparePeriods: '' }) %}{% endif %}
-    {% if row.getMetadata('compareDate')|default is not empty %}{% set overrideParams = overrideParams|merge({ date: row.getMetadata('compareDate'), compareDates: '' }) %}{% endif %}
+    {% if row.getMetadata('comparePeriod')|default is not empty %}{% set overrideParams = overrideParams|merge({ period: rootDataTable.getMetadata('comparePeriods')[loop.index0], comparePeriods: '' }) %}{% endif %}
+    {% if row.getMetadata('compareDate')|default is not empty %}{% set overrideParams = overrideParams|merge({ date: rootDataTable.getMetadata('compareDates')[loop.index0], compareDates: '' }) %}{% endif %}
     {% set idSubtable = row.getMetadata('idsubdatatable_in_db') %}
     <tr
         {% if idSubtable != false %}data-idsubtable="{{ idSubtable|e('html_attr') }}"{% endif %}
