Fix more TODO items and refactoring.

--- a/plugins/CoreHome/stylesheets/dataTable/_comparisonsTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_comparisonsTable.less
@@ -15,7 +15,6 @@
     }
   }
 
-  // TODO: need to use theme colors wherevere possible
   tr.comparePeriod {
     .dataTableRowActions {
       display: none !important;
@@ -23,7 +22,7 @@
 
     td.label {
       font-weight: bold;
-      color: #aaa;
+      color: @color-silver-l60;
     }
   }
 
