Fill out more TODO.

--- a/plugins/CoreHome/angularjs/period-selector/period-selector.directive.less
+++ b/plugins/CoreHome/angularjs/period-selector/period-selector.directive.less
@@ -63,7 +63,7 @@
     height: 1px;
     margin-left: 8px;
     margin-right: 8px;
-    background-color: #1a1a1a; // TODO: change colors to variables
+    background-color: @color-silver-l14;
     width: 16px;
     display: inline-block;
     position: relative;
