--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -606,6 +606,11 @@ a.visitor-log-visitor-profile-link {
   }
 }
 
+.reporting-page #widgetLivewidget .theWidgetContent .visitsLiveFooter {
+  margin-left: -9px;
+  margin-right: -2px;
+}
+
 .refresh-divider {
   display: none;
 }
