--- a/plugins/Morpheus/templates/_jsGlobalVariables.twig
+++ b/plugins/Morpheus/templates/_jsGlobalVariables.twig
@@ -22,7 +22,11 @@
 
     {% if idSite is defined %}piwik.idSite = "{{ idSite }}";{% endif %}
 
-    {% if siteName is defined %}piwik.siteName = "{{ siteName|e('js') }}";{% endif %}
+    {% if siteName is defined %}
+    // NOTE: siteName is currently considered deprecated, use piwik.currentSiteName instead, which will not contain HTML entities
+    piwik.siteName = "{{ siteName|e('js') }}";
+    piwik.currentSiteName = {{ siteNameDecoded|json_encode|raw }};{% endif %}
+    {% endif %}
 
     {% if siteMainUrl is defined %}piwik.siteMainUrl = "{{ siteMainUrl|e('js') }}";{% endif %}
 
