make it work for mobile, remove duplicate dot, minor style tweak

--- a/plugins/Feedback/stylesheets/feedback.less
+++ b/plugins/Feedback/stylesheets/feedback.less
@@ -11,7 +11,7 @@
 
   p, h4 {
     font-size: 13px;
-    padding-bottom: 0;
+    padding-bottom: 4px;
   }
 
   .browse-matomo-help {
@@ -46,6 +46,7 @@
   .feedback-help-resources {
     h4 {
       padding-top: 20px;
+      padding-bottom: 8px;
     }
 
     .search-matomo-form {
@@ -68,7 +69,7 @@
       }
 
       input[type="text"] {
-        width: 90%;
+        width: 87%;
         padding-left: 10px;
         border: none;
         margin-bottom: 0;
