When loading a template url from a custom plugin directory, prefix the relative directory (#14717)
* When loading a template url from a custom plugin directory, prefix the relative directory

* detect relative dir partially

* replace the initial plugins part as well

* only print info for activated plugins

* Update _jsGlobalVariables.twig

* remove duplicate endif

* Update http404check.js

--- a/plugins/Morpheus/templates/_jsGlobalVariables.twig
+++ b/plugins/Morpheus/templates/_jsGlobalVariables.twig
@@ -16,6 +16,8 @@
         symbolDecimal: "{{ 'Intl_NumberSymbolDecimal'|translate }}"
     };
 
+    piwik.relativePluginWebDirs = {{ relativePluginWebDirs|json_encode|raw }}
+
     {% if userLogin %}piwik.userLogin = "{{ userLogin|e('js')}}";{% endif %}
 
     {% if idSite is defined %}piwik.idSite = "{{ idSite }}";{% endif %}
@@ -57,3 +59,4 @@
     piwik.shouldPropagateTokenAuth = {{ shouldPropagateTokenAuth|json_encode|raw }};
     {{ postEvent("Template.jsGlobalVariables") }}
 </script>
+
