--- a/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
+++ b/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
@@ -25,9 +25,10 @@
     {% if row.getMetadata('comparePeriod')|default is not empty %}{% set overrideParams = overrideParams|merge({ period: row.getMetadata('comparePeriod'), comparePeriods: '' }) %}{% endif %}
     {% if row.getMetadata('compareDate')|default is not empty %}{% set overrideParams = overrideParams|merge({ date: row.getMetadata('compareDate'), compareDates: '' }) %}{% endif %}
     {% set idSubtable = row.getMetadata('idsubdatatable_in_db') %}
+    {% set seriesIndex = loop.index0 %}
     <tr
         {% if idSubtable != false %}data-idsubtable="{{ idSubtable|e('html_attr') }}"{% endif %}
-        data-comparison-series="{{ loop.index0 }}"
+        data-comparison-series="{{ seriesIndex }}"
         class="comparisonRow"
         data-param-override="{{ overrideParams|json_encode|e('html_attr') }}" data-label="{{ comparedRow.getColumn('label')|e('html_attr') }}"
         {% if row.getMetadata('segment') is not false %}data-segment-filter="{{ row.getMetadata('segment')|e('html_attr') }}"{% endif %}
@@ -44,7 +45,7 @@
         {% if column != 'label' %}
         {% set columnValue = row.getColumn(column) %}
         <td class="column">
-            {% set comparisonTotals = comparisonTotals[loop.index0].totals|default(null) %}
+            {% set rowComparisonTotals = comparisonTotals[seriesIndex].totals|default(null) %}
 
             {% set comparisonTooltipSuffix = '' %}
             {% set columnChange = false %}
@@ -55,7 +56,7 @@
 
             {% include "@CoreVisualizations/_dataTableViz_htmlTable_ratio.twig" with {
                 'changePercentage': columnChange,
-                'totals': comparisonTotals,
+                'totals': rowComparisonTotals,
                 'label': comparedRow.getColumn('label'),
                 'labelColumn': properties.columns_to_display|first,
                 'changePercantage': columnChange,
