Tweak placement of some icons.

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -49,6 +49,11 @@ table.dataTable img {
   margin-left: 0.5em;
 }
 
+table.dataTable img.link {
+  position: relative;
+  top: 5px;
+}
+
 table.subDataTable img.link {
   transform: translateY(-50%);
 }
