Fix for split dimension view.

--- a/plugins/CoreHome/stylesheets/dataTable/_comparisonsTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_comparisonsTable.less
@@ -10,7 +10,7 @@
       display: none !important;
     }
 
-    > td:not(:first-child) > * {
+    > td:not(.label) > * {
       visibility: hidden;
     }
   }
