--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -49,7 +49,7 @@ table.dataTable img {
   margin-left: 0.5em;
 }
 
-table.dataTable img.link {
+table.dataTable tr:not(.parentComparisonRow) img.link {
   position: relative;
   top: 5px;
 }
