Only show separate dimensions if supposed to in comparison view.

--- a/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
+++ b/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable_comparisons.twig
@@ -42,7 +42,7 @@
             <span class="label">{{ comparisonLabel }}</span>
         </td>
         {% for dimension in dimensions %}
-        {% if loop.index0 != 0 %}
+        {% if loop.index0 != 0 and dimension in properties.columns_to_display %}
         <td class="label">
             &nbsp;
         </td>
