--- a/plugins/SitesManager/templates/siteWithoutData.twig
+++ b/plugins/SitesManager/templates/siteWithoutData.twig
@@ -86,7 +86,10 @@
 
                 <h3>{{ 'CoreAdminHome_HttpTrackingApi'|translate }}</h3>
                 <p>{{ 'CoreAdminHome_HttpTrackingApiDescription'|translate('<a href="https://developer.matomo.org/api-reference/tracking-api" rel="noreferrer noopener" target="_blank">','</a>')|raw }}</p>
-                <p></p>
+
+                {% if googleAnalyticsImporterMessage is defined %}
+                {{ googleAnalyticsImporterMessage|raw }}
+                {% endif %}
 
                 {{ postEvent('Template.endTrackingHelpPage') }}
 
