--- a/plugins/CoreHome/templates/quickLinks.twig
+++ b/plugins/CoreHome/templates/quickLinks.twig
@@ -1,5 +1,5 @@
 <div class="widgetBody quickLinks">
-    {% if not hasSitesAdmin %}
+    {% if hasSitesAdmin %}
     <div class="quickLink">
         <span class="icon icon-open-source">&nbsp;</span>
         <a href="{{ linkTo({'module': 'SitesManager', 'action': 'index', 'showaddsite': '1'}) }}" class="itemLabel">
@@ -7,7 +7,7 @@
         </a>
     </div>
     {% endif %}
-    {% if not hasUsersAdmin %}
+    {% if hasUsersAdmin %}
     <div class="quickLink">
         <span class="icon icon-user-add">&nbsp;</span>
         <a href="{{ linkTo({'module': 'UsersManager', 'action': 'index', 'showadduser': '1'}) }}" class="itemLabel">
