Allow user to set noreply email address and name on Settings page

--- a/plugins/CoreAdminHome/templates/generalSettings.twig
+++ b/plugins/CoreAdminHome/templates/generalSettings.twig
@@ -51,7 +51,7 @@
                     {{ 'General_ReportsContainingTodayWillBeProcessedAtMostEvery'|translate }}
                 </h3>
                 <div class="input-field col s12 m6">
-                    <input  type="text" value='{{ todayArchiveTimeToLive  }}' id='todayArchiveTimeToLive' {% if not isGeneralSettingsAdminEnabled %}disabled="disabled"{% endif %} />
+                    <input  type="text" value='{{ todayArchiveTimeToLive|e('html_attr') }}' id='todayArchiveTimeToLive' {% if not isGeneralSettingsAdminEnabled %}disabled="disabled"{% endif %} />
                     <span class="form-description">
                         {{ 'General_RearchiveTimeIntervalOnlyForTodayReports'|translate }}
                     </span>
@@ -93,26 +93,26 @@
                 <div piwik-field uicontrol="text" name="mailHost"
                      ng-model="mailSettings.mailHost"
                      data-title="{{ 'General_SmtpServerAddress'|translate|e('html_attr') }}"
-                     value="{{ mail.host }}">
+                     value="{{ mail.host|e('html_attr') }}">
                 </div>
 
                 <div piwik-field uicontrol="text" name="mailPort"
                      ng-model="mailSettings.mailPort"
                      data-title="{{ 'General_SmtpPort'|translate|e('html_attr') }}"
-                     value="{{ mail.port }}" inline-help="{{ 'General_OptionalSmtpPort'|translate|e('html_attr') }}">
+                     value="{{ mail.port|e('html_attr') }}" inline-help="{{ 'General_OptionalSmtpPort'|translate|e('html_attr') }}">
                 </div>
 
                 <div piwik-field uicontrol="select" name="mailType"
                      ng-model="mailSettings.mailType"
                      data-title="{{ 'General_AuthenticationMethodSmtp'|translate|e('html_attr') }}"
                      options="{{ mailTypes|json_encode }}"
-                     value="{{ mail.type }}" inline-help="{{ 'General_OnlyUsedIfUserPwdIsSet'|translate|e('html_attr') }}">
+                     value="{{ mail.type|e('html_attr') }}" inline-help="{{ 'General_OnlyUsedIfUserPwdIsSet'|translate|e('html_attr') }}">
                 </div>
 
                 <div piwik-field uicontrol="text" name="mailUsername"
                      ng-model="mailSettings.mailUsername"
                      data-title="{{ 'General_SmtpUsername'|translate|e('html_attr') }}"
-                     value="{{ mail.username }}" inline-help="{{ 'General_OnlyEnterIfRequired'|translate|e('html_attr') }}"
+                     value="{{ mail.username|e('html_attr') }}" inline-help="{{ 'General_OnlyEnterIfRequired'|translate|e('html_attr') }}"
                      autocomplete="off">
                 </div>
 
@@ -129,11 +129,27 @@
                      autocomplete="off">
                 </div>
 
+                {% if mail.exposeNoReplyEmail %}
+                <div piwik-field uicontrol="text" name="mailFromAddress"
+                     ng-model="mailSettings.mailFromAddress"
+                     title="{{ 'General_SmtpFromAddress'|translate|e('html_attr') }}"
+                     value="{{ mail.noreply_email_address|e('html_attr') }}" inline-help="{{ 'General_UsuallyYourEmailAddress'|translate|e('html_attr') }}"
+                     autocomplete="off">
+                </div>
+                {% endif %}
+
+                <div piwik-field uicontrol="text" name="mailFromName"
+                     ng-model="mailSettings.mailFromName"
+                     title="{{ 'General_SmtpFromName'|translate|e('html_attr') }}"
+                     value="{{ mail.noreply_email_name|e('html_attr') }}" inline-help="{{ 'General_NameShownInTheSenderColumn'|translate|e('html_attr') }}"
+                     autocomplete="off">
+                </div>
+
                 <div piwik-field uicontrol="select" name="mailEncryption"
                      ng-model="mailSettings.mailEncryption"
                      data-title="{{ 'General_SmtpEncryption'|translate|e('html_attr') }}"
                      options="{{ mailEncryptions|json_encode }}"
-                     value="{{ mail.encryption }}" inline-help="{{ 'General_EncryptedSmtpTransport'|translate|e('html_attr') }}">
+                     value="{{ mail.encryption|e('html_attr') }}" inline-help="{{ 'General_EncryptedSmtpTransport'|translate|e('html_attr') }}">
                 </div>
             </div>
 
