--- a/plugins/PrivacyManager/templates/askingForConsent.twig
+++ b/plugins/PrivacyManager/templates/askingForConsent.twig
@@ -46,7 +46,7 @@ _paq.push(['trackPageview']);
         </p>
         <pre piwik-select-on-focus><code>_paq.push(['rememberConsentGiven'])</code></pre>
         <p>
-            Matomo will then remember on subsequent requests that the user has given her or his consent by setting a cookie named "consent". As long as this cookie exists, Matomo will know that consent has been given and will automatically process the data. This means that you only need to call <code piwik-select-on-focus>_paq.push(['rememberConsentGiven'])</code> once, and it is not needed to call <code piwik-select-on-focus>_paq.push(['setConsentGiven'])</code> on any page view.
+            {{ ConsentStep3Note4 <code piwik-select-on-focus>_paq.push(['rememberConsentGiven'])</code> {{ ConsentStep3Note5 <code piwik-select-on-focus>_paq.push(['setConsentGiven'])</code>{{ ConsentStep3Note6
             <br /><br />
             Notes:
         </p>
