--- a/plugins/CoreHome/angularjs/widget-bydimension-container/widget-bydimension-container.directive.less
+++ b/plugins/CoreHome/angularjs/widget-bydimension-container/widget-bydimension-container.directive.less
@@ -1,13 +1,20 @@
 .reportsByDimensionView {
 
+    float: left;
+    width: 100%;
+
     .dimensionCategory {
         color: @theme-color-text-contrast;
     }
 
     .reportContainer {
-        margin-left: 230px;
+        padding-left: 230px;
         min-width: 500px;
-        overflow: auto;
+        width: 100%;
+
+        .dimensionReport {
+            float: left;
+        }
 
         table.dataTable tr td.label {
             max-width: 380px;
